# networks_final

./: CLAUDE.md  README.md  pyproject.toml
new/: RESULTS.md
new/code/: network_experiment.py  networks.py  plot_network_results.py
new/code/snlearn/: __init__.py  (+3 more)
new/data/: barabasi_albert_m6_100nodes_seed42.pkl  erdos_renyi_100nodes_seed42.pkl  facebook_community_100nodes_seed42.pkl  sbm_100nodes_seed42.pkl
new/output/: network_diagnostics.csv  results_network_comparison.csv
old/: INSTRUCOES_FACTCHECK.md
old/code/: Network.ipynb  README.md  analyze_results.py  batch_simulation.py  compare_experiments.py  create_network.py  plot_reach_only.py  requirements.txt  run_simulation.py
old/data/: barabasi_default_100nodes_seed42.pkl  barabasi_default_200nodes_seed42.pkl  facebook_community_200nodes_seed42.pkl  facebook_community_500nodes_seed42.pkl
old/paper/: appendix.tex  conclusion.tex  intro.tex  main.tex  model.tex  outcome.tex  package.tex  references.bib  results.tex  simulation.tex
old/results/: baseline_plus_bots.csv  baseline_plus_bots_inf.csv  baseline_plus_bots_inf_3.csv  baseline_plus_bots_inf_8.csv  baseline_plus_inf.csv  baseline_plus_inf_bots.csv  baseline_vary_truth.csv  exp_bots_variation.csv  exp_bots_variation_agressive.csv  exp_influencers_variation.csv  factcheck_comparison.csv  factcheck_comparison_2.csv  factcheck_comparison_3.csv  platform_vary_truth_revelation_prob.csv  prob_truth_experiment.csv  revelation_test.csv  telegram_like_vary_bots.csv  telegram_like_vary_prob_truth.csv  test_batch.csv  whatsapp_like_vary_prob_truth.csv
(+16 files in other folders)
