[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "python-louvain>=0.16",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "code"
